--- a/firstweb.html
+++ b/firstweb.html
@@ -6,8 +6,7 @@
 <body>
     <h1>Welcome to my Webpage</h1>
     <p>My name is Eakkasit</p>
-    <img src="Cute_dog.jpg" alt = 'My Dog'>
-    width = '100'>
+    <img src="Cute_dog.jpg" alt = 'My Dog' width="100">
 
 </body>
 </html>
